--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="btn btn-warning"  target="_bank" href="https://www.nfu.edu.tw">NFU</a>
 
 
-    <div class="card-group">
+ <div class="card-group">
             <div class="card">
               <img src="imges/cat.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -26,32 +26,33 @@
                         ★嫩肩牛排肉質Q彈有嚼勁，雪花般的油花分佈
                         ★雪花翼板牛排，肉質口感柔嫩不油膩
                         ★澳洲S背肩特選250g大份量</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <a class="btn btn-warning"  target="_bank" href="https://24h.pchome.com.tw/prod/DBCP1E-1900AWFCC?fq=/S/DBCP1E">詳細資訊</a>
               </div>
             </div>
             <div class="card">
-              <img src="imges/cat.jpg" class="card-img-top" alt="...">
+              <img src="imges/dog.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">野獸派就愛食肉8件組</h5>
-                <p class="card-text">★無骨牛小排肉質鮮嫩帶嚼勁，大理石油花豐富細緻
-                        ★嫩肩牛排肉質Q彈有嚼勁，雪花般的油花分佈
-                        ★雪花翼板牛排，肉質口感柔嫩不油膩
-                        ★澳洲S背肩特選250g大份量</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">海陸巨霸豪華13件組(6-8人)</h5>
+                <p class="card-text">★日本北海道S級干貝，簡單料理，奢華享受!
+                        ★嚴選美國Choice等級牛排
+                        ★嚴選大尺寸挪威鯖魚，輕抹薄鹽肉質超鮮甜
+                        ★整顆蒜頭的蒜味香腸，無須另外剝蒜頭，即烤即吃!</p>
+                        <a class="btn btn-warning"  target="_bank" href="https://24h.pchome.com.tw/prod/DBCP1E-1900AWGAW?fq=/S/DBCP1E">詳細資訊</a>
               </div>
             </div>
             <div class="card">
-              <img src="imges/cat.jpg" class="card-img-top" alt="...">
+              <img src="imges/apple.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">野獸派就愛食肉8件組</h5>
-                <p class="card-text">★無骨牛小排肉質鮮嫩帶嚼勁，大理石油花豐富細緻
-                        ★嫩肩牛排肉質Q彈有嚼勁，雪花般的油花分佈
-                        ★雪花翼板牛排，肉質口感柔嫩不油膩
-                        ★澳洲S背肩特選250g大份量</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">美國星級特選Choice雪花翼板牛排120gx3片</h5>
+                <p class="card-text">★嚴選美國Choice等級進口
+                        ★取自牛肩胛部位，只能取出約4分之1的翼板牛排
+                        ★大理石油花擁有分布均勻的小筋，口感柔嫩不油膩
+                        ★建議熟度為七分熟為最佳，簡單香煎給你大大滿足！</p>
+                        <a class="btn btn-warning"  target="_bank" href="https://24h.pchome.com.tw/prod/DBCP14-1900AVSVE?fq=/S/DBCP1E">詳細資訊</a>
               </div>
             </div>
           </div>
+
 
 
 
